<resources>
    <string name="app_name">MyAlarmApp</string>
    <string name="txt_hello">Hello</string>
    <string name="txt_welcome">Welcome to Smart Alarm</string>
    <string name="txt_time_today">13.05</string>
    <string name="txt_date_today">Sun, 26 december 2022</string>
    <string name="txt_set_reminder">Set Your Reminder</string>
    <string name="txt_set">SET</string>
    <string name="txt_one_time_alarm">ONE TIME ALARM</string>
    <string name="txt_repeating_alarm">REPEATING ALARM</string>
    <string name="txt_your_alarm">Your Alarm</string>
    <string name="txt_set_date">Set Date</string>
    <string name="txt_set_time">Set Time</string>
    <string name="txt_note">Note</string>
    <string name="txt_add_set_alarm">Add Set Alarm</string>
    <string name="txt_cancel_set_alarm">Cancel Set Alarm</string>
    <string name="txt_input_note">Input Your Note</string>
    <string name="txt_mon_27_december_2021">Mon, 27 December 2021</string>
    <string name="txt_team_meeting">Team Meeting</string>
    <string name="txt__09_30">09.30</string>
    <string name="txt_time">Time</string>

</resources>