<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".OneTimeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_title_one_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_set3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/minecraft"
            android:text="@string/txt_set"
            android:textColor="@color/green"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_one_time_alarm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/minecraft"
            android:text="@string/txt_one_time_alarm"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_set3" />

        <ImageView
            android:layout_width="@dimen/_70dp"
            android:layout_height="@dimen/_60dp"
            android:src="@drawable/clock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_content_one_time"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_margin="@dimen/_25dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/background_stroke_white"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/view_title_one_time"
        tools:layout_editor_absoluteX="-55dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_date_one_time"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardBackgroundColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_set_date_one_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_stroke_white2">

                <TextView
                    android:id="@+id/tv_once_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/minecraft"
                    android:text="@string/txt_date_today"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_set_time_repeating"
                    android:layout_width="95dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="@dimen/_11sp"
                    android:text="@string/txt_set_date"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/green"
                    android:fontFamily="@font/minecraft"
                    android:textAllCaps="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/card_time_one_time"
            app:cardBackgroundColor="@color/black"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_date_one_time">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/view_set_time"
                android:background="@drawable/background_stroke_white2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_once_time"
                    android:text="@string/txt_time"
                    android:textColor="@color/white"
                    android:fontFamily="@font/minecraft"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <Button
                    android:id="@+id/btn_set_time_one_time"
                    android:layout_width="95dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="@dimen/_11sp"
                    android:text="@string/txt_set_time"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/green"
                    android:fontFamily="@font/minecraft"
                    android:textAllCaps="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_note_one_time"
            android:fontFamily="@font/minecraft"
            android:text="@string/txt_note"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_time_one_time"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_note_one_time"
            android:backgroundTint="#647AFF"
            android:fontFamily="@font/minecraft"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:hint="@string/txt_input_note"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_note_one_time"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_set_one_time_alarm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_stroke_white2"
            android:text="@string/txt_add_set_alarm"
            android:textColor="@color/green"
            android:textAllCaps="false"
            android:fontFamily="@font/minecraft"
            android:textSize="@dimen/_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_note_one_time"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_cancel_set_alarm"
            android:textAllCaps="false"
            android:textSize="@dimen/_18sp"
            android:textColor="#AF1D1D"
            android:fontFamily="@font/minecraft"
            android:background="@drawable/background_stroke_white2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_add_set_one_time_alarm"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
